--- a/src/manager/templates/main_template.html
+++ b/src/manager/templates/main_template.html
@@ -38,7 +38,10 @@
     {% block genre_filter %}
     {% endblock %}
 
-    {% block test %}
+    {% block personal_page %}
+    {% endblock %}
+
+    {% block mytest %}
     {% endblock %}
 </div>
 </body>
