--- a/src/manager/templates/index.html
+++ b/src/manager/templates/index.html
@@ -25,7 +25,9 @@
 <a href="{% url 'login' %}">login</a>
 
 <p class="text-success">Пользователь: {{ user }}</p>
-
+<br>
+<a href="{% url 'the-personal-page' %}">Кабинет</a>
+<br>
 <a href="{% url 'logout' %}">logout</a>
 <br>
 <a href="{% url 'register' %}">Register</a>
@@ -101,22 +103,37 @@
 
 <ul class="pagination">
     <li class="page-item">
+        <a class="page-link" href="?page=1">
+            1
+        </a>
+    </li>
 
-        <a class="page-link" href="?page=1">start</a>
+    {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                previous page
+            </a>
+        </li>
+    {% endif %}
 
-        {% if page_obj.has_previous %}
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
-        {% endif %}
-
+    <li class="page-item active">
         <span class="current">
             Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
         </span>
+    </li>
 
-        {% if page_obj.has_next %}
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
-        {% endif %}
+    {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                next page
+            </a>
+        </li>
+    {% endif %}
 
-         <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">end</a>
+     <li class="page-item">
+         <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+             {{ page_obj.paginator.num_pages }}
+         </a>
     </li>
 </ul>
 
